round 1/MONDALROY/error-output.txt
submissions/MONDALROY/problem1.c:1:5: error: expected unqualified-id before 'a'
 int 'a'
     ^~~
